--- a/templates/example.html
+++ b/templates/example.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../static/css/main.css">
   </head>
   <body>
-  <!-- <code id="treeModel" style="display:none">{{ treeNav }}</code>  -->
+  <code id="treeModel" style="display:none">{{ treeNav }}</code>
   	<div id="nav"></div>
     <div id="container">
         <div id="sidebar"></div>
@@ -20,14 +20,19 @@
         </div>
     </div>
   <!--  <script>$("#article").load("../static/html/article.html");</script>-->
-  	<script>$("#nav").load("../static/html/nav2.html");</script>
-    <script>
-    $("#sidebar").load("../static/html/tree.html",function(){
+  	<script>$("#nav").load("../static/html/nav2.html",function(){
       {%- if 'nickname' in session -%}
         $("#navi-right-menu-login").hide();
         $("#navi-right-menu-hello").text("hello,{{ nickname }}!" )
       {% endif %}
-    });
+    });</script>
+    <script>
+    $("#sidebar").load("../static/html/tree.html");
   </script>
+      {%- if 'nickname' in session -%}
+        <form action="./logout">
+          <input type="submit" value="logout"/>
+        </form>
+      {% endif %}
   </body>
 </html>
